(05/07/09)
*** swift-log-to-cedps is removed. The functionality of generating
    .cedps format files is available by specifying the desired .cedps files
    in an invocation of swift-plot-log. Lack of widespread use of this
    command means a deprecation period is probably unnecessary.

(05/05/09)
*** New configuration property provenance.log which controls whether verbose
    provenance-related log information is recorded in the run log file or
    not. By default, this is false, which means that less information is
    output by default now than previously.

(04/27/09)
*** Swift 0.9 built from Swift SVN r2860 and cog SVN r2388

(03/30/09)
*** Removed support for .dtm file extension which was deprecated in Swift 0.4

(03/29/09)
*** Added console text interface to provide live information about swift 
    runs.

(03/27/09)
*** Environment variable SWIFT_EXTRA_INFO, when set in an environment profile,
    is executed with the result being recorded in wrapper logs. This allows
    arbitrary information about the remote environment to be gathered and
    returned to the submit side.

*** The wrapper.sh and seq.sh scripts that are deployed to remote sites to
    help with execution have been renamed to more Swift specific names, to
    avoid collision with user-supplied files of the same name. The new names
    are _swiftwrap and _swiftseq

(03/15/09)
*** The log-processing code, primarily exposed as the swift-plot-log command,
    has been merged into the main Swift release, rather than being a separate
    download.

(03/09/09)
*** Added a throttling parallelFor and changed the swift foreach underlying
    implementation to it. The throttling parallelFor limits the number of
    concurrent iterations allowed, which should allow swift to scale better
    in certain cases.

(02/24/09)
*** New configuration option wrapper.invocation.mode, specifiable either
    globally in the configuration file or per-site as a profile key,