@@ -295,6 +295,14 @@ replication.limit=3
 #
 # status.mode=files
 
+# Controls how swift will supply parameters to the remote wrapper script.
+# 'args' mode will pass parameters on the command line
+# 'files' mode will pass parameters through an additional input file
+#
+# valid values: args, files
+# Default: files
+#
+# wrapper.parameter.mode=args
 
 # Determines if Swift remote wrappers will be executed by specifying an
 # absolute path, or a path relative to the job initial working directory
