@@ -2,7 +2,7 @@
 for a in clusters no-retries dryrun typecheck path-prefix restart restart2 restart3 restart4 restart5 restart-iterate workernode-local \
 ordering-extern-notlazy restart-extern ordering-extern \
 external-mapper-args extract-int-delayed asserts \
-relative-wrapper arg \
+relative-wrapper arg arg-mode \
 ; do
  ./${a}.sh
  R=$?
